--- a/src/FoodFiesta/style.css
+++ b/src/FoodFiesta/style.css
@@ -659,7 +659,7 @@ ui-dialog-content **/
 }
 
 
-.content-section .content .button a{
+.content-section .content .button {
   background-color: #960001;
   padding: 17px 40px;
   text-decoration: none;
@@ -670,10 +670,108 @@ ui-dialog-content **/
   font-family: "Zoika";
 }
 
-.content-section .content .button a:hover{
+.content-section .content .button:hover{
   background-color: aliceblue;
   color: #960001;
 }
+
+
+.modalbg {
+  position: fixed;
+  font-family: "Zoika";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0);
+  z-index: 99999;
+  -moz-transition: all 2s ease-out;
+  -webkit-transition: all 2s ease-out;
+  -o-transition: all 2s ease-out;
+  transition: all 2s ease-out;
+  -webkit-transition-delay: 0.2s;
+  -moz-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  -transition-delay: 0.2s;
+  display: block;
+  pointer-events: none;
+}
+.modalbg .dialog {
+  width: 50%;
+  height: auto;
+  position: relative;
+  top: -8000px;
+  margin: 25% auto;
+  padding: 35px ;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #960001;
+  box-shadow: 0 0 10px #000;
+  -moz-box-shadow: 0 0 10px #000;
+  -webkit-box-shadow: 0 0 10px #000;
+}
+.modalbg .dialog .ie7 {
+  filter: progid:DXImageTransform.Microsoft.Shadow(color='#000', Direction=135, Strength=3);
+}
+.modalbg:target {
+  display: block;
+  pointer-events: auto;
+  background: rgba(4, 10, 30, 0.8);
+  -moz-transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+.modalbg:target .dialog {
+  top: -90px;
+  -moz-transition: all 0.8s ease-out;
+  -webkit-transition: all 0.8s ease-out;
+  -o-transition: all 0.8s ease-out;
+  transition: all 0.8s ease-out;
+  -webkit-transition-delay: 0.4s;
+  -moz-transition-delay: 0.4s;
+  -o-transition-delay: 0.4s;
+  -transition-delay: 0.4s;
+}
+.close {
+  background: #606061;
+  color: #ffffff;
+  line-height: 25px;
+  position: absolute;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  box-shadow: 0 0 10px #000;
+  -moz-box-shadow: 0 0 10px #000;
+  -webkit-box-shadow: 0 0 10px #000;
+  -moz-transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  -webkit-transition-delay: 0.2s;
+  -moz-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  -transition-delay: 0.2s;
+}
+.close .ie7 {
+  filter: progid:DXImageTransform.Microsoft.Shadow(color='#000', Direction=135, Strength=3);
+}
+.close:hover {
+  background: #ffffff;
+  -moz-transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
+
 
 @media screen and (max-width:950px){
   .content-section .title h1{
@@ -700,11 +798,13 @@ ui-dialog-content **/
     font-size: 450%;
 }
 
+.modalbg .dialog {
+  margin: 35% auto;}
 
 .content-section .content p{
   font-size: 100%;
 }
-.content-section .content .button a{
+.content-section .content .button {
   padding: 0.8rem 1.5rem;
   font-size: 100%;
   letter-spacing: .8px;
@@ -721,7 +821,6 @@ ui-dialog-content **/
   height: auto;
 }
 }
-
 
 
 /** Gallery **/
