--- a/src/FoodFiesta/style.css
+++ b/src/FoodFiesta/style.css
@@ -259,7 +259,16 @@ nav .icon-burger .line {
     padding-right: 14px; 
 }
 }
+@media screen and (max-width:370px){
+  .fhero h1{
+    font-size: 290%;
+}
 
+.fhero h2{
+    font-size: 90%;
+}
+
+}
 
 
 
@@ -363,6 +372,26 @@ nav .icon-burger .line {
   }
 
 }
+@media screen and (max-width:360px){
+  .jud1{
+    top: 90%;
+    left: 8%;
+    font-size: 100%;
+  }
+  .jud2{
+    top: 85%;
+    left: 37%;
+    font-size: 100%;
+  }
+  .jud3{
+    top: 90%;
+    left: 70%;
+    font-size: 100%;
+  }
+
+}
+
+
 
 .spon{
     height: 100%;
@@ -452,7 +481,7 @@ nav .icon-burger .line {
   .spon-in ul li {
     width: 55%;
   height: 55%;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
   border: 4px;
   border-radius: 15px;
   padding: 2px;
@@ -486,32 +515,16 @@ nav .icon-burger .line {
     object-fit: contain;
 }
 
-.register .regcontainer .button{
-  margin-top: 0px;
+.register .regcontainer h1{
+  position:absolute;
   text-align: center;
-  position: absolute;
-  top: 90%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-
-
-.register .regcontainer .button a{
-  background-color: #ED1B25;
-  padding: 1rem 3rem;
-  text-decoration: none;
-  color: aliceblue;
-  font-size: 2rem;
+  top: 88%;
+  left: 30%;
+  color: #ffffff;
+  font-size: 4rem;
   font-family: "Zoika";
-  letter-spacing: 1.5px;
-  border-radius: 12px;
 }
 
-.register .regcontainer .button a:hover{
-  background-color: aliceblue;
-  color: #ED1B25;
-}
 
 .regseparator {
   height: 24%;
@@ -558,15 +571,12 @@ nav .icon-burger .line {
   .register{
     height:auto;
  }
- .register .regcontainer .button a{
-  padding: 0.3rem 1rem;
-  font-size: 100%;
-  letter-spacing: .8px;
-  border-radius: 12px;
+
+ .register .regcontainer h1{
+  font-size: 1rem;
+  left: 26%;
 }
-.register .regcontainer .button{
-  top: 90%;
-}
+ 
 }
 .zaika{
     height: 110vh;
